Update 2020-08-07-understanding-the-JVM-book-notes.md